After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674072 - scanner: Ignore #defines starting with _
scanner: Ignore #defines starting with _
Status: RESOLVED FIXED
Product: gobject-introspection
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gobject-introspection Maintainer(s)
gobject-introspection Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-04-13 19:30 UTC by Colin Walters
Modified: 2015-02-07 17:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
scanner: Ignore #defines starting with _ (1.60 KB, patch)
2012-04-13 19:30 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2012-04-13 19:30:33 UTC
This matches our behavior for symbols (and we should probably fix this
more globally...I think we still scan _-prefixed enums).

Noticed from gudev which had #define _GUDEV_INSIDE_H 1
Comment 1 Colin Walters 2012-04-13 19:30:36 UTC
Created attachment 212020 [details] [review]
scanner: Ignore #defines starting with _
Comment 2 Colin Walters 2012-10-27 15:36:53 UTC
Attachment 212020 [details] pushed as 7f10346 - scanner: Ignore #defines starting with _
Comment 3 André Klapper 2015-02-07 17:02:15 UTC
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]