udev: gudev - silence introspection scanner warning

<kay> walters: you happen to know how to silence this? gudev.h:24: Warning:
  GUdev: symbol='_GUDEV_INSIDE_GUDEV_H': Unknown namespace for symbol 'GUDEV_INSIDE_GUDEV_H'
<walters> kay, probably:
<walters> -#define _GUDEV_INSIDE_GUDEV_H 1
<walters> +#define _GUDEV_INSIDE_GUDEV_H
<walters> kay, if the scanner sees a define with a value it assumes it's a constant for public consumption

<walters> kay, patch in https://bugzilla.gnome.org/show_bug.cgi?id=674072 fwiw
<kay> walters: cool, thanks!
<kay> walters: your workaround removing the "1" works. nice!